# c_big_int

./: .gitignore  CMakeLists.txt  README.md  big_int.c  big_int.h  main.c  test.c  test_big_int.h
